@@ -1,8 +1,24 @@
+/**
+ * Copyright (c) 2003-2017 The Apereo Foundation
+ *
+ * Licensed under the Educational Community License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *             http://opensource.org/licenses/ecl2
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 package org.sakaiproject.gradebookng.tool.panels;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.text.DecimalFormat;
+import java.text.NumberFormat;
 import java.text.ParseException;
 import java.util.Collections;
 import java.util.HashMap;
@@ -90,7 +106,7 @@ public class SettingsCategoryPanel extends BasePanel {
 			if (category.getDropHighest() != null && category.getDropHighest() > 0) {
 				this.isDropHighest = true;
 			}
-			if (category.getDrop_lowest() != null && category.getDrop_lowest() > 0) {
+			if (category.getDropLowest() != null && category.getDropLowest() > 0) {
 				this.isDropLowest = true;
 			}
 			if (category.getKeepHighest() != null && category.getKeepHighest() > 0) {
@@ -145,7 +161,7 @@ public class SettingsCategoryPanel extends BasePanel {
 		this.categoriesAndWeighting = new Radio<>("categoriesAndWeighting",
 				new Model<>(GbCategoryType.WEIGHTED_CATEGORY.getValue()));
 
-		//on load, if course grade displayed and points selected, disable categories and weighting
+		// on load, if course grade displayed and points selected, disable categories and weighting
 		updateCategoriesAndWeightingRadioState();
 
 		categoryType.add(none);
@@ -208,7 +224,7 @@ public class SettingsCategoryPanel extends BasePanel {
 				if (!SettingsCategoryPanel.this.isDropLowest) {
 					for (final CategoryDefinition c : SettingsCategoryPanel.this.model.getObject().getGradebookInformation()
 							.getCategories()) {
-						c.setDrop_lowest(0);
+						c.setDropLowest(0);
 					}
 					target.appendJavaScript("$('.gb-category-droplowest').hide();");
 				}
@@ -274,7 +290,9 @@ public class SettingsCategoryPanel extends BasePanel {
 				// if categories and weighting, disable course grade points
 				final AjaxCheckBox points = settingsPage.getSettingsGradeReleasePanel().getPointsCheckBox();
 				settingsPage.getSettingsGradeReleasePanel().updatePointsCheckboxState();
-				target.add(points);
+				if (points.isVisibleInHierarchy()) {
+					target.add(points);
+				}
 
 				// reinitialize any custom behaviour
 				target.appendJavaScript("sakai.gradebookng.settings.categories = new GradebookCategorySettings($('#settingsCategories'));");
@@ -312,7 +330,8 @@ public class SettingsCategoryPanel extends BasePanel {
 				final CategoryDefinition category = item.getModelObject();
 
 				// get the config. If there are no categories, detault is that the settings are enabled.
-				final boolean dropKeepEnabled = BooleanUtils.toBooleanDefaultIfNull(SettingsCategoryPanel.this.categoryDropKeepAvailability.get(category.getId()), true);
+				final boolean dropKeepEnabled = BooleanUtils
+						.toBooleanDefaultIfNull(SettingsCategoryPanel.this.categoryDropKeepAvailability.get(category.getId()), true);
 
 				// note that all of these fields must have an ajaxform behaviour attached
 				// so that their data is persisted into the model.
@@ -376,27 +395,30 @@ public class SettingsCategoryPanel extends BasePanel {
 
 				// declare these here so we can work with the values. Config updated afterwards
 				// mutually exclusive rules apply here
-				final TextField<Integer> categoryDropHighest = new TextField<Integer>("categoryDropHighest", new PropertyModel<Integer>(category, "dropHighest"));
-				final TextField<Integer> categoryDropLowest = new TextField<Integer>("categoryDropLowest", new PropertyModel<Integer>(category, "drop_lowest"));
-				final TextField<Integer> categoryKeepHighest = new TextField<Integer>("categoryKeepHighest", new PropertyModel<Integer>(category, "keepHighest"));
+				final TextField<Integer> categoryDropHighest = new TextField<Integer>("categoryDropHighest",
+						new PropertyModel<Integer>(category, "dropHighest"));
+				final TextField<Integer> categoryDropLowest = new TextField<Integer>("categoryDropLowest",
+						new PropertyModel<Integer>(category, "dropLowest"));
+				final TextField<Integer> categoryKeepHighest = new TextField<Integer>("categoryKeepHighest",
+						new PropertyModel<Integer>(category, "keepHighest"));
 
 				boolean categoryDropHighestEnabled = true;
 				boolean categoryDropLowestEnabled = true;
 				boolean categoryKeepHighestEnabled = true;
 
-				if(category.getDropHighest() != null && category.getDropHighest().intValue() > 0) {
-					categoryKeepHighest.setModelValue(new String[]{"0"});
+				if (category.getDropHighest() != null && category.getDropHighest().intValue() > 0) {
+					categoryKeepHighest.setModelValue(new String[] { "0" });
 					categoryKeepHighestEnabled = false;
 				}
 
-				if(category.getDrop_lowest() != null && category.getDrop_lowest().intValue() > 0) {
-					categoryKeepHighest.setModelValue(new String[]{"0"});
+				if (category.getDropLowest() != null && category.getDropLowest().intValue() > 0) {
+					categoryKeepHighest.setModelValue(new String[] { "0" });
 					categoryKeepHighestEnabled = false;
 				}
 
-				if(category.getKeepHighest() != null && category.getKeepHighest().intValue() > 0) {
-					categoryDropHighest.setModelValue(new String[]{"0"});
-					categoryDropLowest.setModelValue(new String[]{"0"});
+				if (category.getKeepHighest() != null && category.getKeepHighest().intValue() > 0) {
+					categoryDropHighest.setModelValue(new String[] { "0" });
+					categoryDropLowest.setModelValue(new String[] { "0" });
 					categoryDropHighestEnabled = false;
 					categoryDropLowestEnabled = false;
 				}
@@ -410,19 +432,19 @@ public class SettingsCategoryPanel extends BasePanel {
 					protected void onUpdate(final AjaxRequestTarget target) {
 						// if drop highest is non zero, keep highest is to be unavailable
 						Integer value = categoryDropHighest.getModelObject();
-						if(value == null) {
+						if (value == null) {
 							value = 0;
-							categoryDropHighest.setModelValue(new String[]{"0"});
+							categoryDropHighest.setModelValue(new String[] { "0" });
 						}
 
-						//remove tooltips and recalc
+						// remove tooltips and recalc
 						removeDropKeepDisabledToolTip(categoryDropHighest);
 						removeDropKeepDisabledToolTip(categoryDropLowest);
 						removeDropKeepDisabledToolTip(categoryKeepHighest);
 
 						categoryKeepHighest.setEnabled(true);
-						if(value.intValue() > 0) {
-							categoryKeepHighest.setModelValue(new String[]{"0"});
+						if (value.intValue() > 0) {
+							categoryKeepHighest.setModelValue(new String[] { "0" });
 							categoryKeepHighest.setEnabled(false);
 							addDropKeepDisabledToolTip(categoryKeepHighest);
 						}
@@ -432,7 +454,7 @@ public class SettingsCategoryPanel extends BasePanel {
 					}
 				});
 				categoryDropHighest.setEnabled(dropKeepEnabled && categoryDropHighestEnabled);
-				if(!categoryDropHighest.isEnabled()) {
+				if (!categoryDropHighest.isEnabled()) {
 					addDropKeepDisabledToolTip(categoryDropHighest);
 				}
 				item.add(categoryDropHighest);
@@ -449,23 +471,23 @@ public class SettingsCategoryPanel extends BasePanel {
 						Integer value1 = categoryDropLowest.getModelObject();
 						Integer value2 = categoryDropHighest.getModelObject();
 
-						if(value1 == null) {
+						if (value1 == null) {
 							value1 = 0;
-							categoryDropLowest.setModelValue(new String[]{"0"});
+							categoryDropLowest.setModelValue(new String[] { "0" });
 						}
-						if(value2 == null) {
+						if (value2 == null) {
 							value2 = 0;
-							categoryDropHighest.setModelValue(new String[]{"0"});
+							categoryDropHighest.setModelValue(new String[] { "0" });
 						}
 
-						//remove tooltips and recalc
+						// remove tooltips and recalc
 						removeDropKeepDisabledToolTip(categoryDropHighest);
 						removeDropKeepDisabledToolTip(categoryDropLowest);
 						removeDropKeepDisabledToolTip(categoryKeepHighest);
 
 						categoryKeepHighest.setEnabled(true);
-						if(value1.intValue() > 0 || value2.intValue() > 0) {
-							categoryKeepHighest.setModelValue(new String[]{"0"});
+						if (value1.intValue() > 0 || value2.intValue() > 0) {
+							categoryKeepHighest.setModelValue(new String[] { "0" });
 							categoryKeepHighest.setEnabled(false);
 							addDropKeepDisabledToolTip(categoryKeepHighest);
 						}
@@ -475,7 +497,7 @@ public class SettingsCategoryPanel extends BasePanel {
 					}
 				});
 				categoryDropLowest.setEnabled(dropKeepEnabled && categoryDropLowestEnabled);
-				if(!categoryDropLowest.isEnabled()) {
+				if (!categoryDropLowest.isEnabled()) {
 					addDropKeepDisabledToolTip(categoryDropLowest);
 				}
 				item.add(categoryDropLowest);
@@ -490,25 +512,25 @@ public class SettingsCategoryPanel extends BasePanel {
 						// if keep highest is non zero, drop highest AND drop lowest are to be unavailable
 						Integer value = categoryKeepHighest.getModelObject();
 
-						if(value == null) {
+						if (value == null) {
 							value = 0;
-							categoryKeepHighest.setModelValue(new String[]{"0"});
+							categoryKeepHighest.setModelValue(new String[] { "0" });
 						}
 
-						//remove tooltips and recalc
+						// remove tooltips and recalc
 						removeDropKeepDisabledToolTip(categoryDropHighest);
 						removeDropKeepDisabledToolTip(categoryDropLowest);
 						removeDropKeepDisabledToolTip(categoryKeepHighest);
 
 						categoryDropHighest.setEnabled(true);
 						categoryDropLowest.setEnabled(true);
-						if(value.intValue() > 0) {
+						if (value.intValue() > 0) {
 
-							categoryDropHighest.setModelValue(new String[]{"0"});
+							categoryDropHighest.setModelValue(new String[] { "0" });
 							categoryDropHighest.setEnabled(false);
 							addDropKeepDisabledToolTip(categoryDropHighest);
 
-							categoryDropLowest.setModelValue(new String[]{"0"});
+							categoryDropLowest.setModelValue(new String[] { "0" });
 							categoryDropLowest.setEnabled(false);
 							addDropKeepDisabledToolTip(categoryDropLowest);
 						}
@@ -518,7 +540,7 @@ public class SettingsCategoryPanel extends BasePanel {
 					}
 				});
 				categoryKeepHighest.setEnabled(dropKeepEnabled && categoryKeepHighestEnabled);
-				if(!categoryKeepHighest.isEnabled()) {
+				if (!categoryKeepHighest.isEnabled()) {
 					addDropKeepDisabledToolTip(categoryKeepHighest);
 				}
 				item.add(categoryKeepHighest);
@@ -629,10 +651,10 @@ public class SettingsCategoryPanel extends BasePanel {
 	private CategoryDefinition stubCategoryDefinition() {
 		final CategoryDefinition cd = new CategoryDefinition();
 		cd.setExtraCredit(false);
-		cd.setWeight(new Double(0));
-		cd.setAssignmentList(Collections.<Assignment> emptyList());
+		cd.setWeight(Double.valueOf(0));
+		cd.setAssignmentList(Collections.<Assignment>emptyList());
 		cd.setDropHighest(0);
-		cd.setDrop_lowest(0);
+		cd.setDropLowest(0);
 		cd.setKeepHighest(0);
 
 		final GbSettings settings = this.model.getObject();
@@ -661,8 +683,10 @@ public class SettingsCategoryPanel extends BasePanel {
 			// convert
 			Double d;
 			try {
-				d = Double.valueOf(value) / 100;
-			} catch (final NumberFormatException e) {
+				final NumberFormat format = NumberFormat.getInstance(locale);
+				final Number number = format.parse(value);
+				d = number.doubleValue() / 100;
+			} catch (final java.text.ParseException e) {
 				throw new ConversionException(e).setResourceKey("settingspage.update.failure.categoryweightnumber");
 			}
 
@@ -694,7 +718,7 @@ public class SettingsCategoryPanel extends BasePanel {
 			// convert to percentage representation
 			final Double percentage = value * 100;
 
-			return FormatHelper.formatDoubleToDecimal(percentage);
+			return FormatHelper.formatGradeForDisplay(percentage);
 		}
 
 	}
@@ -763,7 +787,6 @@ public class SettingsCategoryPanel extends BasePanel {
 		return this.categoriesAndWeighting;
 	}
 
-	
 	// helper to apply the rules for whether the categories and weighting radio should be enabled
 	// runs via data from the model
 	protected void updateCategoriesAndWeightingRadioState() {
@@ -784,9 +807,10 @@ public class SettingsCategoryPanel extends BasePanel {
 		}
 
 	}
-	
+
 	/**
 	 * Helper to add the tooltip when drop/keep settings cause a field to be disabled.
+	 *
 	 * @param textfield
 	 */
 	private void addDropKeepDisabledToolTip(final Component textfield) {
@@ -796,6 +820,7 @@ public class SettingsCategoryPanel extends BasePanel {
 
 	/**
 	 * Helper to remove the tooltip from above
+	 *
 	 * @param textfield
 	 */
 	private void removeDropKeepDisabledToolTip(final Component textfield) {
